# Yggdrasil

./: .gitignore
samples/backend-service/: BackendService.cpp  BackendService.h  CMakeLists.txt  build.sh  main.cpp
samples/linux/: CMakeLists.txt  main.cpp
samples/linux/common/: OsalLogger.cpp  OsalLogger.h  OsalTask.cpp  OsalTask.h
